# thex

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.pt-br.md  LICENSE  README.md  README.pr-br.md  README.pt-br.md  batch.sh  commands.md  commit  project-structure.md  run-build.sh  run-command.sh  run-settings.sh  run.sh  thex
.github/workflows/: build.yaml  cmake-multi-platform.yml  linux.yaml  windows.yaml
include/: file.h  input.h  pallete.h  ui.h  util.h  util.hpp
include/interface/: color.h  color.hpp  draw.h  draw.hpp  input.h  input.hpp  pallete.h  pallete.hpp  ui.h  ui.hpp
include/thex/: app.h  app.hpp  cmdline.h  config.h  config.hpp  cursor.h  editor.h  old-cursor  preview.h  statusbar.h
include/thex/ui/: cmdline.h  cmdline.hpp  editor.h  hexeditor.h  hexeditor.hpp  statusbar.h  statusbar.hpp
src/: draw.cpp  file.cpp  input.cpp  main.cpp  ui.cpp  util.cpp
src/interface/: color.cpp  draw.cpp  input.cpp  ui.cpp
src/thex/: app.cpp  cmdline.cpp  config.cpp  editor.cpp  preview.cpp  statusbar.cpp
src/thex/ui/: cmdline.cpp  editor.cpp  hexeditor.cpp  statusbar.cpp
src/util/: convert.cpp  fs.cpp  num.cpp  str.cpp  term.cpp  validate.cpp
